# doc/api.yaml
@@ -1,4 +1,6 @@
 openapi: 3.0.3
+servers:
+  - url: "http://localhost:3000"
 info:
   title: WasaText
   description: |
@@ -97,7 +99,7 @@ paths:
         - bearerAuth: []
       summary: set user name of the utent
       description: |
-        Taking a name from the requestBody, replace the 
+        Taking a name from the requestBody, replace the
         username actually used from the utent with the new one
       requestBody:
         content:
@@ -114,7 +116,6 @@ paths:
           content:
             plain/text:
               schema: { $ref: "#/components/schemas/Profile" }
-              example: Username changed successfully
         "400": { $ref: "#/components/responses/BadRequest" }
         "401": { $ref: "#/components/responses/Unauthorized" }
         "403": { $ref: "#/components/responses/Forbidden" }
@@ -159,7 +160,7 @@ paths:
         - bearerAuth: []
       summary: creation of a group
       description: |
-        With a name taked from the user, create a group 
+        With a name taked from the user, create a group
         controlling if the name is already in use
       requestBody:
         content:
@@ -176,7 +177,7 @@ paths:
           description: Group created succesfully
           content:
             application/json:
-              schema: { $ref: "#/components/schemas/Identification" }
+              schema: { $ref: "#/components/schemas/Group" }
         "400": { $ref: "#/components/responses/BadRequest" }
         "500": { $ref: "#/components/responses/InternalServerError" }
   /users/{user}/groups/{group}:
@@ -196,7 +197,7 @@ paths:
         - bearerAuth: []
       summary: add the user to a group
       description: |
-        Add the user the the group 
+        Add the user the the group
         in 'group' defined in the path
       responses:
         "200":
@@ -215,7 +216,7 @@ paths:
         - bearerAuth: []
       summary: leave from a group
       description: |
-        Leave the user from the group 
+        Leave the user from the group
         specified with the id in the path
       responses:
         "200":
@@ -238,7 +239,7 @@ paths:
         - bearerAuth: []
       summary: set name of the group
       description: |
-        Taking a name from the requestBody, replace the 
+        Taking a name from the requestBody, replace the
         group name actually used with the new one
       requestBody:
         content:
@@ -316,13 +317,7 @@ paths:
           description: Conversation opened
           content:
             application/json:
-              schema: { $ref: "#/components/schemas/Identification" }
-          links:
-            getConversationId:
-              operationId: getConversation
-              parameters:
-                conversation_id: "$response.body#/conversation_id"
-              description: Obtain details of the conversation specified with convid
+              schema: { $ref: "#/components/schemas/Conversation" }
         "400": { $ref: "#/components/responses/BadRequest" }
         "401": { $ref: "#/components/responses/Unauthorized" }
         "404": { $ref: "#/components/responses/NotFound" }
@@ -418,7 +413,7 @@ paths:
         - bearerAuth: []
       summary: Forward message to a conversation
       description: |
-        Forward the selcted message from 
+        Forward the selcted message from
         the path to a conversation defined in the quey
       responses:
         "201":
@@ -615,6 +610,9 @@ components:
         emoticon:
           type: string
           description: emoticon
+          minLength: 1
+          maxLength: 1
+          pattern: "^.*?$"
           example: "🐱"
     MsgText:
       title: Message Text
@@ -668,19 +666,6 @@ components:
       oneOf:
         - $ref: "#/components/schemas/SentMessage"
         - $ref: "#/components/schemas/RcvMessage"
-    MessagesList:
-      title: Messages List
-      description: list of all message of a conversation
-      type: object
-      properties:
-        messages:
-          type: array
-          description: Message of a conversation
-          items: { $ref: "#/components/schemas/Message" }
-          minItems: 0
-          maxItems: 100
-      required:
-        - messages
     Group:
       title: Group
       description: Group in which various users write each other
